--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -14,6 +14,7 @@
         tools:context=".MainActivity">
 
         <androidx.fragment.app.FragmentContainerView
+            android:name="androidx.navigation.fragment.NavHostFragment"
             android:id="@+id/nav_host_fragment_container"
             android:layout_width="0dp"
             android:layout_height="0dp"
