--- a/app/src/main/res/layout/single_post_item.xml
+++ b/app/src/main/res/layout/single_post_item.xml
@@ -13,9 +13,10 @@
         android:layout_height="match_parent">
 
         <ImageView
+            android:scaleType="centerCrop"
             android:id="@+id/post_image"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="300dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
@@ -23,30 +24,32 @@
 
 
         <de.hdodenhof.circleimageview.CircleImageView
+            android:layout_marginTop="10dp"
             android:id="@+id/profile_image"
-            android:layout_width="96dp"
-            android:layout_height="96dp"
-            app:civ_border_color="#FF000000"
-            app:civ_border_width="2dp"
+            android:layout_width="60dp"
+            android:layout_height="60dp"
+            android:src="@drawable/cutie"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="parent"
-            android:src="@drawable/cutie" />
+            app:layout_constraintTop_toBottomOf="@id/post_image" />
 
         <TextView
+            android:layout_marginStart="16dp"
+            android:textColor="@color/design_default_color_primary"
             android:id="@+id/user_name"
-            android:textSize="28sp"
-            android:gravity="center"
+            android:textSize="22sp"
+            android:gravity="start"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@+id/profile_image"
-            app:layout_constraintTop_toBottomOf="parent"
+            app:layout_constraintTop_toTopOf="@id/profile_image"
             app:layout_constraintBottom_toBottomOf="@id/profile_image"
             tools:text="username" />
         <TextView
+            android:layout_marginTop="10dp"
             android:padding="8dp"
             android:id="@+id/description"
-            android:textSize="18sp"
+            android:textSize="14sp"
             android:gravity="center"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
