--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -16,8 +16,9 @@
         app:layout_constraintTop_toBottomOf="@+id/imageView" />
 
     <ImageView
+        android:src="@drawable/ic_logo"
         android:id="@+id/imageView"
-        android:layout_width="300dp"
+        android:layout_width="200dp"
         android:layout_height="200dp"
         android:layout_marginTop="80dp"
         app:layout_constraintEnd_toEndOf="parent"
