--- a/app/src/main/res/layout/single_post_item.xml
+++ b/app/src/main/res/layout/single_post_item.xml
@@ -24,27 +24,40 @@
 
 
         <de.hdodenhof.circleimageview.CircleImageView
-            android:layout_marginTop="10dp"
             android:id="@+id/profile_image"
             android:layout_width="60dp"
             android:layout_height="60dp"
+            android:layout_marginTop="10dp"
             android:src="@drawable/cutie"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/post_image" />
 
         <TextView
-            android:layout_marginStart="16dp"
-            android:textColor="@color/design_default_color_primary"
             android:id="@+id/user_name"
-            android:textSize="22sp"
-            android:gravity="start"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginStart="16dp"
+            android:layout_marginEnd="16dp"
+            android:gravity="start"
+            android:textColor="@color/design_default_color_primary"
+
+            android:textSize="22sp"
+            app:layout_constraintBottom_toBottomOf="@id/profile_image"
+            app:layout_constraintEnd_toStartOf="@+id/imageView2"
             app:layout_constraintStart_toEndOf="@+id/profile_image"
             app:layout_constraintTop_toTopOf="@id/profile_image"
-            app:layout_constraintBottom_toBottomOf="@id/profile_image"
             tools:text="username" />
+
+        <ImageView
+            android:id="@+id/imageView2"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:layout_marginEnd="16dp"
+            android:src="@drawable/ic_heart"
+            app:layout_constraintBottom_toBottomOf="@+id/profile_image"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="@+id/profile_image" />
+
         <TextView
             android:layout_marginTop="10dp"
             android:padding="8dp"
