--- a/app/src/main/res/menu/menu_bottom_main.xml
+++ b/app/src/main/res/menu/menu_bottom_main.xml
@@ -3,11 +3,13 @@
 
     <item
         android:id="@+id/feedFragment"
+        android:icon="@drawable/ic_rss"
         android:title="@string/title_feed" />
     <item
         android:id="@+id/addFriendFragment"
         android:title="@string/title_add_friend" />
     <item
+        android:icon="@drawable/ic_baseline_menu_24"
         android:id="@+id/menuFragment"
         android:title="@string/title_menu" />
 </menu>
