--- a/app/src/main/res/menu/menu_bottom_main.xml
+++ b/app/src/main/res/menu/menu_bottom_main.xml
@@ -6,8 +6,8 @@
         android:icon="@drawable/ic_rss"
         android:title="@string/title_feed" />
     <item
-        android:id="@+id/addFriendFragment"
-        android:title="@string/title_add_friend" />
+        android:id="@+id/uploadImageFragment"
+        android:title="@string/create_post" />
     <item
         android:icon="@drawable/ic_baseline_menu_24"
         android:id="@+id/menuFragment"
