--- a/app/src/main/res/navigation/nav_graph_main.xml
+++ b/app/src/main/res/navigation/nav_graph_main.xml
@@ -12,13 +12,12 @@
         android:label="Feed"
         tools:layout="@layout/feed_fragment" />
     <fragment
-        android:id="@+id/addFriendFragment"
-        android:name="com.aliakberaakash.cutiehacksproject2020.ui.features.addfriend.AddFriendFragment"
-        android:label="Add Friend"
-        tools:layout="@layout/add_friend_fragment" />
-    <fragment
         android:id="@+id/menuFragment"
         android:name="com.aliakberaakash.cutiehacksproject2020.ui.features.menu.MenuFragment"
         android:label="Menu"
         tools:layout="@layout/menu_fragment" />
+    <fragment
+        android:id="@+id/uploadImageFragment"
+        android:name="com.aliakberaakash.cutiehacksproject2020.ui.features.uploadImage.UploadImageFragment"
+        android:label="UploadImageFragment" />
 </navigation>
