--- a/app/src/main/res/layout/uploadimage_layout.xml
+++ b/app/src/main/res/layout/uploadimage_layout.xml
@@ -17,16 +17,15 @@
 
     <Button
         android:id="@+id/uploadBtn"
-        android:layout_width="wrap_content"
+        android:layout_width="140dp"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="30dp"
+        android:layout_marginTop="20dp"
+        android:backgroundTint="@color/upload"
         android:text="@string/upload"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:textAllCaps="false"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        android:paddingHorizontal="25dp"
-        android:textAllCaps="false"
-        android:backgroundTint="@color/upload"/>
+        app:layout_constraintTop_toBottomOf="@+id/imageUpload" />
 
     <TextView
         android:id="@+id/share"
@@ -38,4 +37,16 @@
         app:layout_constraintTop_toTopOf="parent"
         android:textSize="26dp"
         android:textColor="@color/black"/>
+
+    <Button
+        android:id="@+id/postBtn"
+        android:layout_width="140dp"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="20dp"
+        android:text="@string/create_post"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        android:backgroundTint="@color/upload"
+        android:textAllCaps="false"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
