--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,4 +10,5 @@
     <color name="connect">#fcb000</color>
     <color name="sendbtn">#ff4d00</color>
     <color name="upload">#ed7b3e</color>
+    <color name="red">#FF0909</color>
 </resources>
