changed post description visibility

--- a/app/src/main/res/layout/single_post_item.xml
+++ b/app/src/main/res/layout/single_post_item.xml
@@ -49,6 +49,7 @@
             app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
+            android:textStyle="bold"
             android:id="@+id/user_name"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
