--- a/app/src/main/res/layout/post_details_fragment.xml
+++ b/app/src/main/res/layout/post_details_fragment.xml
@@ -40,6 +40,7 @@
                 app:layout_constraintTop_toTopOf="parent" />
 
             <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/users_list"
                 app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                 tools:listitem="@layout/item_single_user"
                 android:layout_width="match_parent"
