--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -12,7 +12,7 @@
     <color name="upload">#ed7b3e</color>
     <color name="red">#FF0909</color>
     <color name="primary">#A1CEB3</color>
-    <color name="primaryDark">#469454</color>
+    <color name="primaryDark">#5F7A6A</color>
     <color name="username_text_color">#616161</color>
     <color name="post_text_color">#757575</color>
 </resources>
