Added chat fragment

--- a/app/src/main/res/menu/menu_bottom_main.xml
+++ b/app/src/main/res/menu/menu_bottom_main.xml
@@ -10,6 +10,10 @@
         android:id="@+id/uploadImageFragment"
         android:title="@string/create_post" />
     <item
+        android:icon="@drawable/ic_chat"
+        android:id="@+id/chatListFragment"
+        android:title="@string/create_post" />
+    <item
         android:icon="@drawable/ic_baseline_menu_24"
         android:id="@+id/menuFragment"
         android:title="@string/title_menu" />
