--- a/app/src/main/res/layout/single_post_item.xml
+++ b/app/src/main/res/layout/single_post_item.xml
@@ -20,11 +20,13 @@
             android:layout_marginStart="16dp"
             android:layout_marginTop="8dp"
             android:layout_marginEnd="16dp"
+            android:layout_marginBottom="16dp"
             android:clipChildren="true"
             android:scaleType="centerCrop"
             android:src="@drawable/cutie"
             app:cardCornerRadius="20dp"
             app:cardElevation="0dp"
+            app:layout_constraintBottom_toTopOf="@+id/i_want_this_button"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/description">
@@ -68,15 +70,13 @@
             android:id="@+id/i_want_this_button"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="16dp"
-            android:layout_marginBottom="16dp"
             android:layout_marginStart="16dp"
             android:layout_marginEnd="16dp"
+            android:layout_marginBottom="16dp"
             android:text="I want this"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/image_holder" />
+            app:layout_constraintStart_toStartOf="parent" />
 
         <com.google.android.material.button.MaterialButton
             android:textColor="@color/red"
