--- a/app/src/main/res/layout/single_post_item.xml
+++ b/app/src/main/res/layout/single_post_item.xml
@@ -20,7 +20,7 @@
             android:layout_marginStart="16dp"
             android:layout_marginTop="8dp"
             android:layout_marginEnd="16dp"
-            android:layout_marginBottom="16dp"
+            android:layout_marginBottom="8dp"
             android:clipChildren="true"
             android:scaleType="centerCrop"
             android:src="@drawable/cutie"
@@ -32,10 +32,11 @@
             app:layout_constraintTop_toBottomOf="@+id/description">
 
             <ImageView
+                android:adjustViewBounds="true"
                 android:id="@+id/post_image"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:src="@drawable/placeholder" />
+                tools:ignore="ContentDescription" />
         </androidx.cardview.widget.CardView>
 
 
