--- a/app/src/main/res/navigation/nav_graph_main.xml
+++ b/app/src/main/res/navigation/nav_graph_main.xml
@@ -14,6 +14,9 @@
         <action
             android:id="@+id/action_feedFragment_to_postDetailsFragment"
             app:destination="@id/postDetailsFragment" />
+        <action
+            android:id="@+id/action_feedFragment_to_winnerFragment"
+            app:destination="@id/winnerFragment" />
     </fragment>
     <fragment
         android:id="@+id/menuFragment"
@@ -38,4 +41,13 @@
         android:name="com.aliakberaakash.cutiehacksproject2020.ui.features.chat.ChatListFragment"
         android:label="Recent"
         tools:layout="@layout/chat_list_fragment" />
+    <fragment
+        android:id="@+id/winnerFragment"
+        android:name="com.aliakberaakash.cutiehacksproject2020.ui.features.winner_screen.WinnerFragment"
+        android:label="Winner"
+        tools:layout="@layout/winner_fragment" >
+        <argument
+            android:name="postId"
+            app:argType="string" />
+    </fragment>
 </navigation>
